force-app/main/default/objects/Application__c/fields/Applying_Purpose_Investment_Loan__c.field-meta.xml
<CustomField>
    <fullName>Applying_Purpose_Investment_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Borrower is applying for a business purpose loan</description>
    <inlineHelpText>Indicates if the Borrower is applying for a business purpose loan</inlineHelpText>
    <label>Applying Purpose Investment Loan</label>
    <type>Checkbox</type>
</CustomField>