force-app/main/default/objects/Application__c/fields/Construction_Projects_Completed__c.field-meta.xml
<CustomField>
    <fullName>Construction_Projects_Completed__c</fullName>
    <label>Construction Projects Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>