force-app/main/default/objects/Application__c/fields/CRE_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>CRE_Loan_Type__c</fullName>
    <label>CRE Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>