force-app/main/default/objects/Application__c/fields/Current_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Payoff_Amount__c</fullName>
    <label>Current Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>