force-app/main/default/objects/Application__c/fields/Estimated_As_Repaired_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_As_Repaired_Value__c</fullName>
    <label>Estimated As Repaired Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>