force-app/main/default/objects/Application__c/fields/Estimated_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Closing_Date__c</fullName>
    <label>Estimated Closing Date</label>
    <type>Date</type>
</CustomField>