force-app/main/default/objects/Application__c/fields/Intend_To_Pay_Loan__c.field-meta.xml
<CustomField>
    <fullName>Intend_To_Pay_Loan__c</fullName>
    <label>Intend To Pay Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>