force-app/main/default/objects/Application__c/fields/Investment_Properties_Sold__c.field-meta.xml
<CustomField>
    <fullName>Investment_Properties_Sold__c</fullName>
    <label>Investment Properties Sold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>