force-app/main/default/objects/Application__c/fields/Long_Loan_Needed__c.field-meta.xml
<CustomField>
    <fullName>Long_Loan_Needed__c</fullName>
    <label>Long Loan Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>