force-app/main/default/objects/Application__c/fields/Long_Properties_Hold__c.field-meta.xml
<CustomField>
    <fullName>Long_Properties_Hold__c</fullName>
    <label>Long Properties Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>