force-app/main/default/objects/Application__c/fields/Other_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Loan_Type__c</fullName>
    <label>Other Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>