force-app/main/default/objects/Application__c/fields/Other_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Type__c</fullName>
    <label>Other Project Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>