force-app/main/default/objects/Application__c/fields/Other_Refinance_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Other_Refinance_Strategy__c</fullName>
    <label>Other Refinance Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>