force-app/main/default/objects/Application__c/fields/Other_Type_of_Properties__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Properties__c</fullName>
    <label>Other Type of Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>