force-app/main/default/objects/Application__c/fields/Perform_Rehab_Work__c.field-meta.xml
<CustomField>
    <fullName>Perform_Rehab_Work__c</fullName>
    <label>Perform Rehab Work</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>