force-app/main/default/objects/Application__c/fields/Plan_Rehab_on_Property__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rehab_on_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Borrower intends on doing rehab on the Property</description>
    <inlineHelpText>Indicates if the Borrower intends on doing rehab on the Property</inlineHelpText>
    <label>Plan Rehab on Property</label>
    <type>Checkbox</type>
</CustomField>