force-app/main/default/objects/Application__c/fields/Properties_Owned_as_Principal__c.field-meta.xml
<CustomField>
    <fullName>Properties_Owned_as_Principal__c</fullName>
    <label>Properties Owned as Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>