force-app/main/default/objects/Application__c/fields/Properties_Owned_Operated_as_Principal__c.field-meta.xml
<CustomField>
    <fullName>Properties_Owned_Operated_as_Principal__c</fullName>
    <description>Number of Properties Owned and Operated as Principal</description>
    <inlineHelpText>Number of Properties Owned and Operated as Principal</inlineHelpText>
    <label>Properties Owned Operated as Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>