force-app/main/default/objects/Application__c/fields/Refinance_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Strategy__c</fullName>
    <label>Refinance Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>