force-app/main/default/objects/Application__c/fields/Renovation_Principal_Rental__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Principal_Rental__c</fullName>
    <label>Renovation Principal Rental</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>