force-app/main/default/objects/Application__c/fields/Rental_Properties_Owned__c.field-meta.xml
<CustomField>
    <fullName>Rental_Properties_Owned__c</fullName>
    <label>Rental Properties Owned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>