force-app/main/default/objects/Application__c/fields/Summary_of_Rehab_Work__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Rehab_Work__c</fullName>
    <label>Summary of Rehab Work</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>