force-app/main/default/objects/Application__c/fields/Term_Sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Sheet Sent</label>
    <type>Checkbox</type>
</CustomField>